more spacing tweaks. fix webkit's negative margin issue by forcing z-index making the screenshot div position:relative

--- a/www/inc/style.css
+++ b/www/inc/style.css
@@ -28,9 +28,10 @@ h1,h2,h3,h4,h5 { color: #729fcf; margin-top: 3em; font-family: Nirvana, Sans-Ser
 
 #main_container,.widthcontainer { max-width: 864px; padding: 0 30px; margin: auto; }
 
-.twocolumn { width: 43%; margin-right: 2em; float: left; }
+.twocolumn { width: 43%; float: left; }
+  .twocolumn:first-child { margin-right: 2em;  }
   .splashimage { }
-#splash { min-height: 700px; overflow: hidden; 
+#splash { min-height: 748px; overflow: hidden; 
           background: black url(../images/splash-bg1.jpg) no-repeat center bottom; }
   #splash .widthcontainer { position: relative; min-width: 878px; }
   #logo { position: absolute; text-indent: -300em; 
@@ -41,7 +42,7 @@ h1,h2,h3,h4,h5 { color: #729fcf; margin-top: 3em; font-family: Nirvana, Sans-Ser
                width: 880px; height: 172px; top: 290px; left: -80px; }
   #easymultimedia { margin-top: 180px; }
    .tagline { margin-top: 435px; color: #ddd; text-align: center; font-weight: bold; width: 400px; padding: 20px 5px;}
-  #install-buttons { position: relative; padding: 0 4em; }
+  #install-buttons { position: relative; padding: 10px 4em; }
     .install-button { width: 120px; height: 40px; border: 0; position: absolute; cursor: pointer; }
     .install-button:hover { background-position: left center; }
     .install-button:active { background-position: left bottom; }
@@ -59,12 +60,12 @@ h1,h2,h3,h4,h5 { color: #729fcf; margin-top: 3em; font-family: Nirvana, Sans-Ser
     ul.intro-list { width: 18em; line-height: 200%; }
     #youcan { margin-top: 3em; }
 
-.screenshots { height: 335px; z-index: 3; margin-top: -40px; padding: 50px; 
+.screenshots { position: relative; height: 335px; z-index: 3; margin-top: -40px; padding: 50px 30px 0; 
                background: url(../images/filmstrip.png) repeat-x 0 0; }
   .screenshots>div { width: 864px; padding: 0 30px; margin: 0 auto; }
-  .screenshots>div>div { float: left; padding: 18px; 
+  .screenshots>div>div { float: left; padding: 15px; 
                          -moz-border-radius: 8px; border-radius: 8px; -webkit-border-radius: 8px;
-                         background-color: rgba(0,0,0,.2); margin-right: 10px; }
+                         background-color: rgba(0,0,0,.2); margin-right: 8px; }
   .screenshots>div>div:hover { background-color: rgba(100%,100%,100%,.2); }
   .screenshots a { display: block; border: 1px solid #fff; }
 
